--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "automata-email-verification",
-  "version": "0.0.5",
+  "version": "0.0.8",
   "description": "emailverification for automata",
   "main": "dist/index.bundle.js",
   "files": [
     "./dist/index.bundle.js"
   ],
   "scripts": {
-    "test": "AUTOMATA_SQLITE_FILE=:memory: jest",
+    "test": "jest",
     "lint": "eslint .",
     "build": "webpack",
     "prepack": "npm run build"
